--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
